<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/register_background">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="340dp"
                    android:layout_height="0dp"

                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="60dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/signup_massage"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/light_green"
                        android:textSize="@dimen/header_font_size"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/fullname_textInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="80dp"
                        android:layout_marginEnd="8dp"


                        android:textColorHint="@color/smoke_white"
                        app:boxBackgroundMode="outline"
                        app:boxStrokeColor="@color/light_green"
                        app:boxStrokeWidth="2dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        app:passwordToggleEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fullname_textField"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_name"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="@color/smoke_white" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/email_textInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="8dp"


                        android:textColorHint="@color/smoke_white"
                        app:boxBackgroundMode="outline"
                        app:boxStrokeColor="@color/light_green"
                        app:boxStrokeWidth="2dp"
                        app:layout_constraintEnd_toEndOf="@+id/fullname_textInputLayout"
                        app:layout_constraintStart_toStartOf="@+id/fullname_textInputLayout"
                        app:layout_constraintTop_toBottomOf="@+id/fullname_textInputLayout"
                        app:passwordToggleEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email_textField"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_email"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="@color/smoke_white" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password_textInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="8dp"
                        android:textColorHint="@color/smoke_white"
                        app:boxBackgroundMode="outline"
                        app:boxStrokeColor="@color/light_green"
                        app:boxStrokeWidth="2dp"
                        app:layout_constraintEnd_toEndOf="@+id/email_textInputLayout"
                        app:layout_constraintStart_toStartOf="@+id/email_textInputLayout"
                        app:layout_constraintTop_toBottomOf="@+id/email_textInputLayout"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="#FFFFFF">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password_textField"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_password"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="@color/smoke_white" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginBottom="32dp"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/register_button">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="40dp"
                                android:layout_marginTop="8dp"
                                android:text="@string/member"
                                android:textAllCaps="true"
                                android:textColor="@color/smoke_white"
                                android:textSize="@dimen/body_font_size"
                                app:layout_constraintEnd_toStartOf="@+id/login_button"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/login_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:layout_marginEnd="40dp"
                                android:text="@string/login"
                                android:textAllCaps="true"
                                android:textColor="@color/light_green"
                                android:textSize="@dimen/body_font_size"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/textView4"
                                app:layout_constraintTop_toTopOf="parent" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </LinearLayout>


                    <Button
                        android:id="@+id/register_button"
                        style="@style/Theme.App"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/button_height"
                        android:layout_marginTop="32dp"
                        android:text="@string/button_register"

                        app:layout_constraintEnd_toEndOf="@+id/password_textInputLayout"
                        app:layout_constraintStart_toStartOf="@+id/password_textInputLayout"
                        app:layout_constraintTop_toBottomOf="@+id/password_textInputLayout" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>